# aims_torch_measure

./: pyproject.toml
.github/workflows/: slow-tests.yml
docs/source/api/: cat.rst  metrics.rst
src/torch_measure/: __init__.py
src/torch_measure/cat/: __init__.py  calibration.py
src/torch_measure/diagnostics/: __init__.py  _ensemble.py  _judge.py  _signals.py
src/torch_measure/metrics/: __init__.py  generalizability.py
src/torch_measure/models/: __init__.py  doubly_robust.py  multifacet_twopl.py  tabpfn_predictor.py
tests/test_cat/: test_calibration.py
tests/test_diagnostics/: test_diagnostics.py
tests/test_metrics/: test_generalizability.py
tests/test_models/: test_doubly_robust.py  test_tabpfn_predictor.py
tutorials/: benchmark_diagnostics_gsm8k.ipynb  doubly_robust_sparse_benchmarks.ipynb  safety_irt_multilingual.ipynb
